--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "@popperjs/core": "^2.11.6",
     "axios": "^1.3.4",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "^5.2.2",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.0.3",
+    "vue-sweetalert2": "^5.0.5",
+    "vue3-lazyload": "^0.3.6",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
